--- a/diplomka/apps/home/templates/cart.html
+++ b/diplomka/apps/home/templates/cart.html
@@ -43,14 +43,20 @@
                     {% for item in request.user.cart_items.first.cart_item.all %}
                     <tr>
                         <th class="ps-0 py-3 border-0" scope="row">
-                            <div class="d-flex align-items-center"><a class="reset-anchor d-block animsition-link"
-                                                                      href="{% url 'detail' item.product.id %}">
-                                {% if item.product.image %}
-                                <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" width="70"/>
-                                {% endif %}
-                            </a>
-                                <div class="ms-3"><strong class="h6"><a class="reset-anchor animsition-link"
-                                                                        href="{% url 'detail' item.product.id %}">{{ item.product.name }}</a></strong>
+                            <div class="d-flex align-items-center">
+                                <a class="reset-anchor d-block animsition-link"
+                                   href="{% url 'detail' item.product.id %}">
+                                    {% if item.product.image %}
+                                    <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" width="70"/>
+                                    {% endif %}
+                                </a>
+                                <div class="ms-3">
+                                    <strong class="h6">
+                                        <a class="reset-anchor animsition-link"
+                                           href="{% url 'detail' item.product.id %}">
+                                            {{ item.product.name }}
+                                        </a>
+                                    </strong>
                                 </div>
                             </div>
                         </th>
@@ -58,12 +64,12 @@
                             <p class="mb-0 small">{{ item.product.price }}</p>
                         </td>
                         <td class="p-3 align-middle border-0">
-                            <div class="border d-flex align-items-center justify-content-between px-3"><span
-                                    class="small text-uppercase text-gray headings-font-family">Quantity</span>
+                            <div class="border d-flex align-items-center justify-content-between px-3">
+                                <span class="small text-uppercase text-gray headings-font-family">Quantity</span>
                                 <div class="quantity">
                                     <button class="dec-btn p-0"><i class="fas fa-caret-left"></i></button>
                                     <input class="form-control form-control-sm border-0 shadow-0 p-0" type="text"
-                                           value="1"/>
+                                           value="{{ item.quantity }}"/>
                                     <button class="inc-btn p-0"><i class="fas fa-caret-right"></i></button>
                                 </div>
                             </div>
@@ -79,23 +85,53 @@
                                 </svg>
                             </a>
                         </td>
-
                     </tr>
-                    </tbody>
-
-
                     {% endfor %}
+                    </tbody>
                 </table>
             </div>
-            <!-- CART NAV-->
-            <div class="bg-light px-4 py-3">
-                <div class="row align-items-center text-center">
-                    <div class="col-md-6 mb-3 mb-md-0 text-md-start">
-                        <a class="btn btn-link p-0 text-dark btn-sm" href="{% url 'shop' %}">
-                            <i class="fas fa-long-arrow-alt-left me-2"> </i>Continue shopping
-                        </a>
+
+            <!-- Total Quantity and Sum -->
+            <div class="cart-summary">
+                <div class="row">
+                    <div class="col-6">
+                        <strong>Total Quantity:</strong> {{ total_quantity }}
+                    </div>
+                    <div class="col-6 text-right">
+                        <strong>Total Sum:</strong> ${{ total_sum }}
                     </div>
                 </div>
+            </div>
+
+        </div>
+        <div class="col-lg-4">
+            <div class="card border-0 rounded-0 p-lg-4 bg-light">
+                <div class="card-body">
+                    <h5 class="text-uppercase mb-4">Cart total</h5>
+                    <ul class="list-unstyled mb-0">
+                        <li class="d-flex align-items-center justify-content-between mb-4"><strong
+                                class="text-uppercase small font-weight-bold">Total sum of your shopping
+                            is</strong><span>${{ total_sum }}</span></li>
+                        <li>
+                            <form action="{% url 'review' %}">
+                                <div class="input-group mb-0">
+                                    <input class="form-control" type="text" placeholder="Напиши отзыв о сайте">
+                                    <button class="btn btn-dark btn-sm w-100" type="submit"><i
+                                            class="fas fa-gift me-2"></i>Оставить отзыв
+                                    </button>
+                                </div>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- CART NAV-->
+        <div class="bg-light px-4 py-3">
+            <div class="row align-items-center text-center">
+                <div class="col-md-6 mb-3 mb-md-0 text-md-start"><a class="btn btn-link p-0 text-dark btn-sm"
+                                                                    href="{% url 'shop' %}"><i
+                        class="fas fa-long-arrow-alt-left me-2"> </i>Continue shopping</a></div>
             </div>
         </div>
     </div>
