--- a/diplomka/apps/home/templates/test.html
+++ b/diplomka/apps/home/templates/test.html
@@ -55,3 +55,64 @@
                             </ul>
                             <p class="text-sm mb-0 text-muted">{{ review.content }}</p>
                         </div>
+
+
+
+
+            <div class="table-responsive mb-4">
+                <table class="table text-nowrap">
+                    <thead class="bg-light">
+                    <tr>
+                        <th class="border-0 p-3" scope="col"><strong class="text-sm text-uppercase">Product</strong>
+                        </th>
+                        <th class="border-0 p-3" scope="col"><strong class="text-sm text-uppercase">Price</strong></th>
+                        <th class="border-0 p-3" scope="col"><strong class="text-sm text-uppercase">Quantity</strong>
+                        </th>
+                        <th class="border-0 p-3" scope="col"><strong class="text-sm text-uppercase">Total</strong></th>
+                        <th class="border-0 p-3" scope="col"><strong class="text-sm text-uppercase"></strong></th>
+                    </tr>
+                    </thead>
+                    <tbody class="border-0">
+                    {% for item in request.user.cart_items.first.cart_item.all %}
+                    <tr>
+                        <th class="ps-0 py-3 border-0" scope="row">
+                            <div class="d-flex align-items-center"><a class="reset-anchor d-block animsition-link"
+                                                                      href="{% url 'detail' item.product.id %}">
+                                {% if item.product.image %}
+                                <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" width="70"/>
+                                {% endif %}
+                            </a>
+                                <div class="ms-3"><strong class="h6"><a class="reset-anchor animsition-link"
+                                                                        href="{% url 'detail' item.product.id %}">{{
+                                    item.product.name }}</a></strong>
+                                </div>
+                            </div>
+                        </th>
+                        <td class="p-3 align-middle border-0">
+                            <p class="mb-0 small">{{ item.product.price }}</p>
+                        </td>
+                        <td class="p-3 align-middle border-0">
+                            <div class="border d-flex align-items-center justify-content-between px-3"><span
+                                    class="small text-uppercase text-gray headings-font-family">Quantity</span>
+                                <div class="quantity">
+                                    <button class="dec-btn p-0"><i class="fas fa-caret-left"></i></button>
+                                    <input class="form-control form-control-sm border-0 shadow-0 p-0" type="text"
+                                           value="1"/>
+                                    <button class="inc-btn p-0"><i class="fas fa-caret-right"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="p-3 align-middle border-0">
+                            <p class="mb-0 small">{{ item.total_price }}</p>
+                        </td>
+                        <td class="p-3 align-middle border-0">
+                            <a class="reset-anchor" href="{% url 'del_from_cart' item.id %}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                     class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                    <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
+                                </svg>
+                            </a>
+                        </td>
+
+                    </tr>
+                    </tbody>
