--- a/diplomka/apps/home/templates/shop.html
+++ b/diplomka/apps/home/templates/shop.html
@@ -84,25 +84,9 @@
             <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                 <div class="row mb-3 align-items-center">
                     <div class="col-lg-6 mb-2 mb-lg-0">
-                        <p class="text-sm text-muted mb-0">Showing 1–12 of 53 results</p>
+                        <p class="text-sm text-muted mb-0">Showing all results</p>
                     </div>
-                    <div class="col-lg-6">
-                        <ul class="list-inline d-flex align-items-center justify-content-lg-end mb-0">
-                            <li class="list-inline-item text-muted me-3"><a class="reset-anchor p-0" href="#!"><i
-                                    class="fas fa-th-large"></i></a></li>
-                            <li class="list-inline-item text-muted me-3"><a class="reset-anchor p-0" href="#!"><i
-                                    class="fas fa-th"></i></a></li>
-                            <li class="list-inline-item">
-                                <select class="selectpicker" data-customclass="form-control form-control-sm">
-                                    <option value>Sort By</option>
-                                    <option value="default">Default sorting</option>
-                                    <option value="popularity">Popularity</option>
-                                    <option value="low-high">Price: Low to High</option>
-                                    <option value="high-low">Price: High to Low</option>
-                                </select>
-                            </li>
-                        </ul>
-                    </div>
+
                 </div>
                 <div class="row">
                     <!-- PRODUCT-->
@@ -143,18 +127,6 @@
                         </div>
                     </div>
                     {% endfor %}
-                    <!-- PAGINATION-->
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center justify-content-lg-end">
-                            <li class="page-item mx-1"><a class="page-link" href="#!" aria-label="Previous"><span
-                                    aria-hidden="true">«</span></a></li>
-                            <li class="page-item mx-1 active"><a class="page-link" href="#!">1</a></li>
-                            <li class="page-item mx-1"><a class="page-link" href="#!">2</a></li>
-                            <li class="page-item mx-1"><a class="page-link" href="#!">3</a></li>
-                            <li class="page-item ms-1"><a class="page-link" href="#!" aria-label="Next"><span
-                                    aria-hidden="true">»</span></a></li>
-                        </ul>
-                    </nav>
                 </div>
             </div>
         </div>
