--- a/diplomka/apps/home/templates/shop.html
+++ b/diplomka/apps/home/templates/shop.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title%}
+{% block title %}
 Покупахтунг
 {% endblock %}
 
@@ -29,12 +29,10 @@
             <!-- SHOP SIDEBAR-->
             <div class="col-lg-3 order-2 order-lg-1">
                 <h5 class="text-uppercase mb-4">Categories</h5>
-                <div class="py-2 px-4 bg-dark text-white mb-3"><strong class="small text-uppercase fw-bold">Все, че
-                    есть</strong></div>
+                <div class="py-2 px-4 bg-dark text-white mb-3"><strong class="small text-uppercase fw-bold">Все, че есть</strong></div>
                 <ul class="list-unstyled small text-muted ps-lg-4 font-weight-normal">
                     {% for cat in categories %}
-                    <li class="mb-2"><a class="reset-anchor" href="{% url 'shop_slug' cat.slug %}">{{ cat.name }}</a>
-                    </li>
+                    <li class="mb-2"><a class="reset-anchor" href="{% url 'shop_slug' cat.slug %}">{{ cat.name }}</a></li>
                     {% endfor %}
                 </ul>
                 <h6 class="text-uppercase mb-3">Show only</h6>
@@ -86,11 +84,10 @@
                     <div class="col-lg-6 mb-2 mb-lg-0">
                         <p class="text-sm text-muted mb-0">Showing all results</p>
                     </div>
-
                 </div>
                 <div class="row">
                     <!-- PRODUCT-->
-                    {% for pro in products %}
+                    {% for pro in page_obj %}
                     <div class="col-lg-4 col-sm-6">
                         <div class="product text-center">
                             <div class="mb-3 position-relative">
@@ -101,23 +98,16 @@
                                 </a>
                                 {% else %}
                                 <a class="d-block" href="detail.html">
-                                    <img class="img-fluid w-100" src="path/to/default-image.jpg"
-                                         alt="Изображение отсутствует">
+                                    <img class="img-fluid w-100" src="path/to/default-image.jpg" alt="Изображение отсутствует">
                                 </a>
                                 {% endif %}
                                 <div class="product-overlay">
                                     <ul class="mb-0 list-inline">
-                                        <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"
-                                                                                href="#!"><i
-                                                class="far fa-heart"></i></a></li>
+                                        <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="#!"><i class="far fa-heart"></i></a></li>
                                         {% if user.is_authenticated %}
-                                        <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                                href="{% url 'detail' pro.pk %}">Go to
-                                            details</a></li>
+                                        <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="{% url 'detail' pro.pk %}">Go to details</a></li>
                                         {% else %}
-                                        <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                                href="{% url 'goreg'  %}">Зарегайся чтоб
-                                            видеть детали</a></li>
+                                        <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="{% url 'goreg'  %}">Зарегайся чтоб видеть детали</a></li>
                                         {% endif %}
                                     </ul>
                                 </div>
@@ -127,6 +117,41 @@
                         </div>
                     </div>
                     {% endfor %}
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center justify-content-lg-end">
+                            {% if page_obj.has_previous %}
+                            <li class="page-item mx-1">
+                                <a class="page-link" href="?page=1" aria-label="Previous">
+                                    <span aria-hidden="true">«</span>
+                                </a>
+                            </li>
+                            <li class="page-item mx-1">
+                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                                    <span aria-hidden="true">‹</span>
+                                </a>
+                            </li>
+                            {% endif %}
+
+                            {% for num in page_obj.paginator.page_range %}
+                            <li class="page-item mx-1 {% if num == page_obj.number %}active{% endif %}">
+                                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                            </li>
+                            {% endfor %}
+
+                            {% if page_obj.has_next %}
+                            <li class="page-item ms-1">
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                                    <span aria-hidden="true">›</span>
+                                </a>
+                            </li>
+                            <li class="page-item ms-1">
+                                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                                    <span aria-hidden="true">»</span>
+                                </a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
